--- a/doc/arrow.less
+++ b/doc/arrow.less
@@ -25,6 +25,7 @@ body, button, input, select, textarea{
     margin: 0;
     padding: 0;
     height: @inputHeight;
+    line-height: @inputHeight;
     text-align: center;
     border: @borderWidth solid #ddd;
     vertical-align: middle;
