--- a/index.less
+++ b/index.less
@@ -1,10 +1,12 @@
 @width: 30px;
 @height: 30px;
 @fontSize: 30px;
-@inputHeight: 36px;
+@inputHeight: 34px;
 @inputFontSize: 20px;
 @disableColor: #ccc;
 @borderWidth: 1px;
+@time: 0.4s;
+
 
 
 body, button, input, select, textarea{
@@ -24,7 +26,7 @@ body, button, input, select, textarea{
     height: @inputHeight;
     line-height: @inputHeight;
     text-align: center;
-    border: 1px solid #ddd;
+    border: @borderWidth solid #ddd;
     vertical-align: middle;
     font-size: @inputFontSize;
   }
@@ -36,10 +38,10 @@ body, button, input, select, textarea{
     text-align: center;
     vertical-align: middle;
     height: @height;
-    line-height: @height;
+    line-height: @height+(-3);
     font-size: @fontSize;
     width: @width;
-    padding: 5px;
+    padding: 3px;
     background-color: #f6f6f6;
     color: #333;
     text-shadow: 0 1px 0 #f3f3f3;
@@ -69,4 +71,23 @@ body, button, input, select, textarea{
   }
 
 
+  .vc-number-range-icon{
+    position: absolute;
+    right: 0;
+    top: -@height*1.5;
+    color: #7f0019;
+    opacity: 1;
+    display: none;
+
+    -webkit-transition: @time all ease-in-out;
+    -moz-transition: @time all ease-in-out;
+    -ms-transition: @time all ease-in-out;
+    -o-transition: @time all ease-in-out;
+  }
+
+  .slideout{
+    height: 0;
+    opacity: 0;
+    top: -@height*2;
+  }
 }
