--- a/1.0.0/arrow.less
+++ b/1.0.0/arrow.less
@@ -5,10 +5,6 @@
 @inputFontSize: 20px;
 @arrowWidth: 5px;
 @borderWidth: 1px;
-@color: #333;
-@disableColor: #ccc;
-@time: 0.4s;
-
 
 body, button, input, select, textarea{
   font-family: tahoma,arial,'Hiragino Sans GB',SimSun,sans-serif;
@@ -25,7 +21,6 @@ body, button, input, select, textarea{
     margin: 0;
     padding: 0;
     height: @inputHeight;
-    line-height: @inputHeight;
     text-align: center;
     border: @borderWidth solid #ddd;
     vertical-align: middle;
@@ -39,7 +34,7 @@ body, button, input, select, textarea{
     text-align: center;
     vertical-align: middle;
     background-color: #f6f6f6;
-    color: @color;
+    color: #333;
     height: @inputHeight/2+1;
     line-height: @inputHeight/2+1;
     width: @width;
@@ -48,61 +43,40 @@ body, button, input, select, textarea{
       width: 0;
       height: 0;
       font-size: 0;
+//      line-height: 0;
       border-width: @arrowWidth;
-      border-color: @color;
       border-style: solid;
     }
   }
   .vc-number-sign:hover{
     background-color: #ededed;
     border-color: #ddd;
-    color: @color;
+    color: #333;
+//    text-shadow: 0 1px 0 #f3f3f3;
   }
   .vc-number-plus{
     right: -@width;
     span{
-      border-color: transparent transparent @color transparent;
+      border-color: transparent transparent #333 transparent;
     }
   }
   .vc-number-minus{
     right: -@width;
     top: @inputHeight/2+1;
     span{
-      border-color: @color transparent transparent transparent;
+      border-color: #333 transparent transparent transparent;
       margin-top: @arrowWidth;
     }
   }
 
   .vc-number-disabled{
     cursor: not-allowed;
-    .vc-number-minus-sign{
-      border-color:@disableColor transparent transparent transparent;
-    }
-    .vc-number-plus-sign{
-      border-color:transparent transparent @disableColor transparent;
+    span{
+      color: #ccc;
     }
   }
   .vc-number-disabled:hover{
     background-color: #f6f6f6;
   }
 
-  .vc-number-range-icon{
-    position: absolute;
-    right: 0;
-    top: -@height*1.5;
-    color: #7f0019;
-    opacity: 1;
-    display: none;
-
-    -webkit-transition: @time all ease-in-out;
-    -moz-transition: @time all ease-in-out;
-    -ms-transition: @time all ease-in-out;
-    -o-transition: @time all ease-in-out;
-  }
-
-  .slideout{
-    height: 0;
-    opacity: 0;
-    top: -@height*2;
-  }
 }
