--- a/1.0.0/index.less
+++ b/1.0.0/index.less
@@ -1,14 +1,22 @@
 @width: 30px;
 @height: 30px;
 @fontSize: 30px;
-@inputHeight: 36px;
+@inputHeight: 34px;
 @inputFontSize: 20px;
+@disableColor: #ccc;
+@borderWidth: 1px;
+@time: 0.4s;
+
+
 
 body, button, input, select, textarea{
   font-family: tahoma,arial,'Hiragino Sans GB',SimSun,sans-serif;
 }
 
 .vc-plus-minus-operation{
+  position: relative;
+  display: inline-block;
+  height: @inputHeight+2*@borderWidth;
   a{
     text-decoration: none;
   }
@@ -16,8 +24,9 @@ body, button, input, select, textarea{
     margin: 0;
     padding:0;
     height: @inputHeight;
+    line-height: @inputHeight;
     text-align: center;
-    border: 1px solid #ddd;
+    border: @borderWidth solid #ddd;
     vertical-align: middle;
     font-size: @inputFontSize;
   }
@@ -29,13 +38,15 @@ body, button, input, select, textarea{
     text-align: center;
     vertical-align: middle;
     height: @height;
-    line-height: @height;
+    line-height: @height+(-3);
     font-size: @fontSize;
     width: @width;
-    padding: 5px;
+    padding: 3px;
     background-color: #f6f6f6;
     color: #333;
     text-shadow: 0 1px 0 #f3f3f3;
+    position: relative;
+    z-index: 10;
   }
   .vc-number-sign:hover{
     background-color: #ededed;
@@ -46,8 +57,13 @@ body, button, input, select, textarea{
 
   .vc-number-disabled{
     cursor: not-allowed;
-    span{
-      color: #ccc;
+    .vc-number-minus-sign{
+      color: @disableColor;
+      border-color:@disableColor transparent transparent transparent;
+    }
+    .vc-number-plus-sign{
+      color: @disableColor;
+      border-color:transparent transparent @disableColor transparent;
     }
   }
   .vc-number-disabled:hover{
@@ -55,4 +71,23 @@ body, button, input, select, textarea{
   }
 
 
+  .vc-number-range-icon{
+    position: absolute;
+    right: 0;
+    top: -@height*1.5;
+    color: #7f0019;
+    opacity: 1;
+    display: none;
+
+    -webkit-transition: @time all ease-in-out;
+    -moz-transition: @time all ease-in-out;
+    -ms-transition: @time all ease-in-out;
+    -o-transition: @time all ease-in-out;
+  }
+
+  .slideout{
+    height: 0;
+    opacity: 0;
+    top: -@height*2;
+  }
 }
