--- a/index.less
+++ b/index.less
@@ -74,10 +74,11 @@ body, button, input, select, textarea{
   .vc-number-range-icon{
     position: absolute;
     right: 0;
-    top: -@height*1.5;
+    top: -@height*1.7;
     color: #7f0019;
     opacity: 1;
     display: none;
+    font-size: 20px;
 
     -webkit-transition: @time all ease-in-out;
     -moz-transition: @time all ease-in-out;
@@ -88,6 +89,6 @@ body, button, input, select, textarea{
   .slideout{
     height: 0;
     opacity: 0;
-    top: -@height*2;
+    top: -@height*2.2;
   }
 }
