--- a/1.1.0/index.less
+++ b/1.1.0/index.less
@@ -29,9 +29,16 @@ body, button, input, select, textarea{
     border: @borderWidth solid #ddd;
     vertical-align: middle;
     font-size: @inputFontSize;
+    border-radius: 0;
   }
   input:focus{
-    text-shadow: 0 1px 0 #f3f3f3;
+//    box-shadow: 0 1px 0 #f3f3f3;
+  }
+  //隐藏type=number的上下箭头
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
   }
   .vc-number-sign{
     display: inline-block;
