--- a/arrow.less
+++ b/arrow.less
@@ -32,7 +32,9 @@ body, button, input, select, textarea{
     font-size: @inputFontSize;
   }
   input:focus{
-    text-shadow: 0 1px 0 #f3f3f3;
+    /*-webkit-box-shadow: inset 0 1px 0 #f3f3f3;
+    -moz-box-shadow: inset 0 1px 0 #f3f3f3;
+    box-shadow: inset 0 1px 0 #f3f3f3;*/
   }
   .vc-number-sign{
     position: absolute;
