--- a/index.less
+++ b/index.less
@@ -29,9 +29,10 @@ body, button, input, select, textarea{
     border: @borderWidth solid #ddd;
     vertical-align: middle;
     font-size: @inputFontSize;
+    border-radius: 0;
   }
   input:focus{
-    text-shadow: 0 1px 0 #f3f3f3;
+//    box-shadow: 0 1px 0 #f3f3f3;
   }
   .vc-number-sign{
     display: inline-block;
