--- a/doc/arrow.less
+++ b/doc/arrow.less
@@ -36,6 +36,12 @@ body, button, input, select, textarea{
     -moz-box-shadow: inset 0 1px 0 #f3f3f3;
     box-shadow: inset 0 1px 0 #f3f3f3;*/
   }
+  //隐藏type=number的上下箭头
+  input::-webkit-outer-spin-button,
+  input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
   .vc-number-sign{
     position: absolute;
     text-align: center;
